--- a/src/app/application/application-dashboard/application-dashboard.component.html
+++ b/src/app/application/application-dashboard/application-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="main_content" *ngIf="!dashboardLoading">
   <div class="page_title d-flex align-items-center">
-    <h2>Application Dashboard </h2> <i (click)="getApplications()" data-toggle="tooltip" data-placement="top" title="Refresh Application List" class="refresh-icon fa">&#xf021;</i>
+    <h2>Verification Dashboard </h2> <i (click)="getApplications()" data-toggle="tooltip" data-placement="top" title="Refresh Application List" class="refresh-icon fa">&#xf021;</i>
     <div class="page_access ml-auto">
       <!-- <button class="btn btn-white"><img src="../../../assets/setting_icon.png" alt="icon" /></button> -->
       <button class="btn btn-primary ml-2" (click)="addNewApplication()" data-backdrop="static" data-keyboard="false"><i
@@ -116,7 +116,7 @@
               <thead>
                 <tr>
                   <th>Service</th>
-                  <th>Sapor</th>
+                  <th>Release Management</th>
                   <th>Visibility</th>
                   <th>Deployment Verification</th>
                 </tr>
