fixes on displaying and saving the namespace details

--- a/src/app/application-onboarding/accounts/dynamic-accounts/dynamic-accounts.component.html
+++ b/src/app/application-onboarding/accounts/dynamic-accounts/dynamic-accounts.component.html
@@ -56,7 +56,7 @@
                     <tr *ngFor="let accountsData of currentPage | filter:searchData; let i=index">
                       <td>{{accountsData.name}}</td>
                       <td>Kubernetes</td>
-                      <td>{{accountsData.namespaces[0]}}</td>
+                      <td>{{accountsData.namespaces}}</td>
 
                       <td>
                         <span *ngIf="accountsData.permissions && accountsData.permissions.READ">
