fix related to filtering the health chart on date

--- a/src/app/cd-dashboard/cd-dashboard.component.html
+++ b/src/app/cd-dashboard/cd-dashboard.component.html
@@ -21,7 +21,7 @@
 
                 <div class="graph-controls d-flex">
                   <div class="mr-3">
-                    <select class="form-control" (change)="filterUpdated($event)" >
+                    <select class="form-control" [(ngModel)]="selectedValue" (change)="filterUpdated($event)" >
                       <option value="1D">Last 1 Day</option>
                       <option value="7D">Last 7 Days</option>
                       <option value="1M">Last 1 Month</option>
@@ -143,7 +143,7 @@
 
         <!-- #################### Add widget charts codes start ############################ -->
 
-        <div class="col-sm-4 px-1 mb-2 cdDashboard">
+        <!-- <div class="col-sm-4 px-1 mb-2 cdDashboard">
           <div class="card border-0">
             <div class="card-body">
               <div class="graph-header d-flex align-items-center justify-content-between">
@@ -177,7 +177,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
 
       <!-- #################### Add widget charts codes end ############################ -->
