Log Template - creating components

--- a/src/styles.less
+++ b/src/styles.less
@@ -2130,3 +2130,6 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	.mandatory {
 		color: red;
 	}
+	.mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar {
+		background-color: #259bf3 !important;
+	}
