Json formatting with ngx-json-viewer

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -84,3 +84,11 @@
     padding-top: 5px;
     padding-bottom: 5px;
 }
+
+.ngx-json-viewer .segment .segment-main .segment-key {
+	color: #333321; 
+}
+.jsonViewer{
+		color: #333321; font-size: 3em;
+
+}
