Updated JSON formating option for visibility

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -57,3 +57,10 @@
     }
 }
 
+.ngx-json-viewer .segment .segment-main .segment-key {
+	color: #333321; 
+}
+.jsonViewer{
+		color: #333321; font-size: 3em;
+
+}
